# NDCAYF

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  dependencies.txt  imgui.ini  main.cpp  main.hpp  nano.save  testSaveWorld.json
docs/: printMessage.man
gamedata/: calibri_ofset-12_height-140.csv  fake.json  menu.json  scratchpadWorld.json  settings.json  world1.json
gamedata/shaders/: 2Dfragmentshader.glsl  2Dvertexshader.glsl  fragmentshader-BulletDebug.glsl  fragmentshader.glsl  vertexshader-BulletDebug.glsl  vertexshader.glsl
networking/: client.c  client.cpp  client.hpp  getLan.c  getLan.cpp  getLan.h  getLan.hpp  networkConfig.c  networkConfig.hpp  oldclient.cpp  server.c
util/: collisionMaskClasses.hpp  globalStateHandlers.cpp  globalStateHandlers.hpp  groundGridGeneration.cpp  groundGridGeneration.hpp  handleinput.cpp  handleinput.hpp  loadMenu.cpp  loadMenu.hpp  loadShaders.cpp  loadShaders.hpp  otherhandlers.cpp  otherhandlers.hpp  vertexGrid.hpp  vertexGridbackup.hpp
util/CircBuffer/: CircBuffer.cpp  CircBuffer.hpp  PacketBuffer.hpp
util/browser/: Browser.cpp  Browser.hpp  oldBrowser.cpp
util/bulletDebug/: collisiondebugdrawer.hpp
util/editor/: browser.cpp  browser.hpp  editor.cpp  editor.hpp
util/networking/: FileGet.cpp  FileGet.hpp  FileUpload.cpp  FileUpload.hpp  MusicStreamer.cpp  MusicStreamer.hpp  TCP.cpp  TCP.hpp  bufferGet.cpp  bufferGet.hpp  client.cpp  client.hpp  clientTCP.cpp  clientTCP.hpp  clientTCPOOP.cpp  clientTCPOOP.hpp  getLan.cpp  getLan.hpp  networkConfig.hpp  server.cpp  songBuffer.cpp  songBuffer.hpp  stream.cpp  stream.hpp
util/networking/MusicPlayer/: stream.cpp  stream.hpp
util/networking/TCP/: FileGet.cpp  FileUpload.cpp  FileUpload.hpp  MusicStreamer.cpp  MusicStreamer.hpp  TCP.cpp
util/object/: mesh.cpp8  mesh.hpp  model.cpp8  model.hpp  object.cpp  object.h  object_gl.cpp  object_gl.h  shader.cpp8  shader.hpp
util/object/shader/: FoutlineShader.glsl  VoutlineShader.glsl  fInstancedShader.glsl  fShader.glsl  vInstancedShader.glsl  vShader.glsl
util/render/: render2D.cpp  render2D.hpp  render3D.cpp  render3D.hpp  skybox.cpp  skybox.hpp  startupConsole.cpp  startupConsole.hpp
